@@ -40,6 +40,8 @@ parameters:
 - setting a value for a fixed parameter will no longer return with an error, if the new value equals the one to which the parameter is fixed
 - parameters "misc/permutationseed", "misc/permuteconss", and "misc/permutevars" changed to "randomization/permutationseed",
   "randomization/permuteconss", and "randomization/permutevars"
+- new parameter "constraints/quadratic/projectedcuts" to enable convex quadratics to generate gradients cuts at the
+  projection of the point onto the region described by the constraint, which is supporting
 
 performance improvements:
 - knapsack approximation algorithms use linear-time weighted median selection instead of sorting
